src/GrammarFiles/ParHint.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.4.1).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module ParHint
  ( happyError
  , myLexer
  , pProgram
  ) where

import Prelude

import qualified AbsHint
import LexHint

}

%name pProgram_internal Program
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!'        { PT _ (TS _ 1)  }
  '!='       { PT _ (TS _ 2)  }
  '%'        { PT _ (TS _ 3)  }
  '&&'       { PT _ (TS _ 4)  }
  '('        { PT _ (TS _ 5)  }
  ')'        { PT _ (TS _ 6)  }
  '*'        { PT _ (TS _ 7)  }
  '+'        { PT _ (TS _ 8)  }
  '++'       { PT _ (TS _ 9)  }
  ','        { PT _ (TS _ 10) }
  '-'        { PT _ (TS _ 11) }
  '--'       { PT _ (TS _ 12) }
  '/'        { PT _ (TS _ 13) }
  ':='       { PT _ (TS _ 14) }
  ';'        { PT _ (TS _ 15) }
  '<'        { PT _ (TS _ 16) }
  '<='       { PT _ (TS _ 17) }
  '='        { PT _ (TS _ 18) }
  '=='       { PT _ (TS _ 19) }
  '>'        { PT _ (TS _ 20) }
  '>='       { PT _ (TS _ 21) }
  '?'        { PT _ (TS _ 22) }
  '['        { PT _ (TS _ 23) }
  '[]'       { PT _ (TS _ 24) }
  ']'        { PT _ (TS _ 25) }
  'boolean'  { PT _ (TS _ 26) }
  'break'    { PT _ (TS _ 27) }
  'continue' { PT _ (TS _ 28) }
  'else'     { PT _ (TS _ 29) }
  'false'    { PT _ (TS _ 30) }
  'for'      { PT _ (TS _ 31) }
  'if'       { PT _ (TS _ 32) }
  'int'      { PT _ (TS _ 33) }
  'print'    { PT _ (TS _ 34) }
  'printf'   { PT _ (TS _ 35) }
  'return'   { PT _ (TS _ 36) }
  'scan'     { PT _ (TS _ 37) }
  'string'   { PT _ (TS _ 38) }
  'to'       { PT _ (TS _ 39) }
  'true'     { PT _ (TS _ 40) }
  'tuple'    { PT _ (TS _ 41) }
  'void'     { PT _ (TS _ 42) }
  'while'    { PT _ (TS _ 43) }
  '{'        { PT _ (TS _ 44) }
  '||'       { PT _ (TS _ 45) }
  '}'        { PT _ (TS _ 46) }
  L_Ident    { PT _ (TV _)    }
  L_integ    { PT _ (TI _)    }
  L_quoted   { PT _ (TL _)    }

%%

Ident :: { (AbsHint.BNFC'Position, AbsHint.Ident) }
Ident  : L_Ident { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.Ident (tokenText $1)) }

Integer :: { (AbsHint.BNFC'Position, Integer) }
Integer  : L_integ  { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), (read (tokenText $1)) :: Integer) }

String  :: { (AbsHint.BNFC'Position, String) }
String   : L_quoted { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), ((\(PT _ (TL s)) -> s) $1)) }

Program :: { (AbsHint.BNFC'Position, AbsHint.Program) }
Program
  : ListTopDef { (fst $1, AbsHint.Program (fst $1) (snd $1)) }

TopDef :: { (AbsHint.BNFC'Position, AbsHint.TopDef) }
TopDef
  : Type Ident '(' ListArg ')' Block { (fst $1, AbsHint.FnDef (fst $1) (snd $1) (snd $2) (snd $4) (snd $6)) }

ListTopDef :: { (AbsHint.BNFC'Position, [AbsHint.TopDef]) }
ListTopDef
  : TopDef { (fst $1, (:[]) (snd $1)) }
  | TopDef ListTopDef { (fst $1, (:) (snd $1) (snd $2)) }

Arg :: { (AbsHint.BNFC'Position, AbsHint.Arg) }
Arg
  : Type Ident { (fst $1, AbsHint.Arg (fst $1) (snd $1) (snd $2)) }

ListArg :: { (AbsHint.BNFC'Position, [AbsHint.Arg]) }
ListArg
  : {- empty -} { (AbsHint.BNFC'NoPosition, []) }
  | Arg { (fst $1, (:[]) (snd $1)) }
  | Arg ',' ListArg { (fst $1, (:) (snd $1) (snd $3)) }

Block :: { (AbsHint.BNFC'Position, AbsHint.Block) }
Block
  : '{' ListStmt '}' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.Block (uncurry AbsHint.BNFC'Position (tokenLineCol $1)) (snd $2)) }

ListStmt :: { (AbsHint.BNFC'Position, [AbsHint.Stmt]) }
ListStmt
  : {- empty -} { (AbsHint.BNFC'NoPosition, []) }
  | Stmt ListStmt { (fst $1, (:) (snd $1) (snd $2)) }

Stmt :: { (AbsHint.BNFC'Position, AbsHint.Stmt) }
Stmt
  : ';' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.Empty (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }
  | Type ListItem ';' { (fst $1, AbsHint.Decl (fst $1) (snd $1) (snd $2)) }
  | Ident '=' Expr ';' { (fst $1, AbsHint.Ass (fst $1) (snd $1) (snd $3)) }
  | Ident '[' Expr ']' '=' Expr ';' { (fst $1, AbsHint.ArrAss (fst $1) (snd $1) (snd $3) (snd $6)) }
  | Ident '++' ';' { (fst $1, AbsHint.Incr (fst $1) (snd $1)) }
  | Ident '--' ';' { (fst $1, AbsHint.Decr (fst $1) (snd $1)) }
  | 'return' Expr ';' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.Ret (uncurry AbsHint.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | 'return' ';' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.VRet (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }
  | 'if' '(' Expr ')' Block { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.Cond (uncurry AbsHint.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
  | 'if' '(' Expr ')' Block 'else' Block { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.CondElse (uncurry AbsHint.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5) (snd $7)) }
  | 'while' '(' Expr ')' Block { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.While (uncurry AbsHint.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
  | 'for' '(' Ident ':=' Expr 'to' Expr ')' Block { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.For (uncurry AbsHint.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5) (snd $7) (snd $9)) }
  | Expr ';' { (fst $1, AbsHint.SExp (fst $1) (snd $1)) }
  | 'break' ';' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.BreakExp (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }
  | 'continue' ';' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.ContExp (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }
  | 'print' '(' Expr ')' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.Print (uncurry AbsHint.BNFC'Position (tokenLineCol $1)) (snd $3)) }
  | 'printf' '(' Expr ',' Expr ',' Expr ',' String ')' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.Printf (uncurry AbsHint.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5) (snd $7) (snd $9)) }

Item :: { (AbsHint.BNFC'Position, AbsHint.Item) }
Item
  : Ident { (fst $1, AbsHint.NoInit (fst $1) (snd $1)) }
  | Ident '=' Expr { (fst $1, AbsHint.Init (fst $1) (snd $1) (snd $3)) }

ListItem :: { (AbsHint.BNFC'Position, [AbsHint.Item]) }
ListItem
  : Item { (fst $1, (:[]) (snd $1)) }
  | Item ',' ListItem { (fst $1, (:) (snd $1) (snd $3)) }

Type :: { (AbsHint.BNFC'Position, AbsHint.Type) }
Type
  : 'int' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.Int (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }
  | 'string' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.Str (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }
  | 'boolean' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.Bool (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }
  | 'void' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.Void (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }
  | 'tuple' '<' ListType '>' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.Tuple (uncurry AbsHint.BNFC'Position (tokenLineCol $1)) (snd $3)) }
  | Type '[]' { (fst $1, AbsHint.Array (fst $1) (snd $1)) }

ListType :: { (AbsHint.BNFC'Position, [AbsHint.Type]) }
ListType
  : {- empty -} { (AbsHint.BNFC'NoPosition, []) }
  | Type { (fst $1, (:[]) (snd $1)) }
  | Type ',' ListType { (fst $1, (:) (snd $1) (snd $3)) }

Expr6 :: { (AbsHint.BNFC'Position, AbsHint.Expr) }
Expr6
  : '?' ListExpr '?' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.ETuple (uncurry AbsHint.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | '[' ListExpr ']' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.EArr (uncurry AbsHint.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | Expr6 '[' Expr ']' { (fst $1, AbsHint.EArrIdx (fst $1) (snd $1) (snd $3)) }
  | Ident { (fst $1, AbsHint.EVar (fst $1) (snd $1)) }
  | Integer { (fst $1, AbsHint.ELitInt (fst $1) (snd $1)) }
  | 'true' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.ELitTrue (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }
  | 'false' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.ELitFalse (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }
  | Ident '(' ListExpr ')' { (fst $1, AbsHint.EApp (fst $1) (snd $1) (snd $3)) }
  | String { (fst $1, AbsHint.EString (fst $1) (snd $1)) }
  | {- empty -} { (AbsHint.BNFC'NoPosition, AbsHint.EEmpty AbsHint.BNFC'NoPosition) }
  | '(' Expr ')' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), (snd $2)) }

Expr :: { (AbsHint.BNFC'Position, AbsHint.Expr) }
Expr
  : 'scan' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.EInput (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }
  | Expr1 '||' Expr { (fst $1, AbsHint.EOr (fst $1) (snd $1) (snd $3)) }
  | Expr1 { (fst $1, (snd $1)) }

Expr5 :: { (AbsHint.BNFC'Position, AbsHint.Expr) }
Expr5
  : '-' Expr6 { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.Neg (uncurry AbsHint.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | '!' Expr6 { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.Not (uncurry AbsHint.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | Expr6 { (fst $1, (snd $1)) }

Expr4 :: { (AbsHint.BNFC'Position, AbsHint.Expr) }
Expr4
  : Expr4 MulOp Expr5 { (fst $1, AbsHint.EMul (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr5 { (fst $1, (snd $1)) }

Expr3 :: { (AbsHint.BNFC'Position, AbsHint.Expr) }
Expr3
  : Expr3 AddOp Expr4 { (fst $1, AbsHint.EAdd (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr4 { (fst $1, (snd $1)) }

Expr2 :: { (AbsHint.BNFC'Position, AbsHint.Expr) }
Expr2
  : Expr2 RelOp Expr3 { (fst $1, AbsHint.ERel (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr3 { (fst $1, (snd $1)) }

Expr1 :: { (AbsHint.BNFC'Position, AbsHint.Expr) }
Expr1
  : Expr2 '&&' Expr1 { (fst $1, AbsHint.EAnd (fst $1) (snd $1) (snd $3)) }
  | Expr2 { (fst $1, (snd $1)) }

ListExpr :: { (AbsHint.BNFC'Position, [AbsHint.Expr]) }
ListExpr
  : {- empty -} { (AbsHint.BNFC'NoPosition, []) }
  | Expr { (fst $1, (:[]) (snd $1)) }
  | Expr ',' ListExpr { (fst $1, (:) (snd $1) (snd $3)) }

AddOp :: { (AbsHint.BNFC'Position, AbsHint.AddOp) }
AddOp
  : '+' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.Plus (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }
  | '-' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.Minus (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }

MulOp :: { (AbsHint.BNFC'Position, AbsHint.MulOp) }
MulOp
  : '*' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.Times (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }
  | '/' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.Div (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }
  | '%' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.Mod (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }

RelOp :: { (AbsHint.BNFC'Position, AbsHint.RelOp) }
RelOp
  : '<' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.LTH (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }
  | '<=' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.LE (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }
  | '>' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.GTH (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }
  | '>=' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.GE (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }
  | '==' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.EQU (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }
  | '!=' { (uncurry AbsHint.BNFC'Position (tokenLineCol $1), AbsHint.NE (uncurry AbsHint.BNFC'Position (tokenLineCol $1))) }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

-- Entrypoints

pProgram :: [Token] -> Err AbsHint.Program
pProgram = fmap snd . pProgram_internal
}
