src/GrammarFiles/ParHint.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParHint.y
-----------------------------------------------------------------------------

state 32 contains 24 reduce/reduce conflicts.
state 41 contains 1 shift/reduce conflicts.
state 62 contains 1 shift/reduce conflicts.
state 111 contains 1 shift/reduce conflicts.

rule 45 is unused
rule 46 is unused
rule 48 is unused

terminal '[' is unused
terminal ']' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Type Ident '(' ListArg ')' Block         (5)
	ListTopDef -> TopDef                               (6)
	ListTopDef -> TopDef ListTopDef                    (7)
	Arg -> Type Ident                                  (8)
	ListArg ->                                         (9)
	ListArg -> Arg                                     (10)
	ListArg -> Arg ',' ListArg                         (11)
	Block -> '{' ListStmt '}'                          (12)
	ListStmt ->                                        (13)
	ListStmt -> Stmt ListStmt                          (14)
	Stmt -> ';'                                        (15)
	Stmt -> Block                                      (16)
	Stmt -> Type ListItem ';'                          (17)
	Stmt -> Ident '=' Expr ';'                         (18)
	Stmt -> Ident '++' ';'                             (19)
	Stmt -> Ident '--' ';'                             (20)
	Stmt -> 'return' Expr ';'                          (21)
	Stmt -> 'return' ';'                               (22)
	Stmt -> 'if' '(' Expr ')' Block                    (23)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (24)
	Stmt -> 'while' '(' Expr ')' Block                 (25)
	Stmt -> 'for' '(' Ident ':=' Expr 'to' Expr ')' Block   (26)
	Stmt -> Expr ';'                                   (27)
	Stmt -> 'break' ';'                                (28)
	Stmt -> 'continue' ';'                             (29)
	Stmt -> 'print' '(' Expr ')'                       (30)
	Stmt -> 'printf' '(' Expr Expr Expr String ')'     (31)
	Item -> Ident                                      (32)
	Item -> Ident '=' Expr                             (33)
	ListItem -> Item                                   (34)
	ListItem -> Item ',' ListItem                      (35)
	Type -> 'int'                                      (36)
	Type -> 'string'                                   (37)
	Type -> 'boolean'                                  (38)
	Type -> 'void'                                     (39)
	Type -> 'tuple' '<' ListType '>'                   (40)
	Type -> Type '[]'                                  (41)
	ListType ->                                        (42)
	ListType -> Type                                   (43)
	ListType -> Type ',' ListType                      (44)
	Expr7 -> '<' ListExpr '>'                          (45)
	Expr7 -> '[' ListExpr ']'                          (46)
	Expr6 -> Ident                                     (47)
	Expr6 -> Integer                                   (48)
	Expr6 -> 'true'                                    (49)
	Expr6 -> 'false'                                   (50)
	Expr6 -> Integer                                   (51)
	Expr6 -> Ident '(' ListExpr ')'                    (52)
	Expr6 -> String                                    (53)
	Expr6 -> '(' Expr ')'                              (54)
	Expr5 -> '-' Expr6                                 (55)
	Expr5 -> '!' Expr6                                 (56)
	Expr5 -> Expr6                                     (57)
	Expr4 -> Expr4 MulOp Expr5                         (58)
	Expr4 -> Expr5                                     (59)
	Expr3 -> Expr3 AddOp Expr4                         (60)
	Expr3 -> Expr4                                     (61)
	Expr2 -> Expr2 RelOp Expr3                         (62)
	Expr2 -> Expr3                                     (63)
	Expr1 -> Expr2 '&&' Expr1                          (64)
	Expr1 -> Expr2                                     (65)
	Expr -> Expr1 '||' Expr                            (66)
	Expr -> Expr1                                      (67)
	ListExpr ->                                        (68)
	ListExpr -> Expr                                   (69)
	ListExpr -> Expr ',' ListExpr                      (70)
	AddOp -> '+'                                       (71)
	AddOp -> '-'                                       (72)
	MulOp -> '*'                                       (73)
	MulOp -> '/'                                       (74)
	MulOp -> '%'                                       (75)
	RelOp -> '<'                                       (76)
	RelOp -> '<='                                      (77)
	RelOp -> '>'                                       (78)
	RelOp -> '>='                                      (79)
	RelOp -> '=='                                      (80)
	RelOp -> '!='                                      (81)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'/'            { PT _ (TS _ 13) }
	':='           { PT _ (TS _ 14) }
	';'            { PT _ (TS _ 15) }
	'<'            { PT _ (TS _ 16) }
	'<='           { PT _ (TS _ 17) }
	'='            { PT _ (TS _ 18) }
	'=='           { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'['            { PT _ (TS _ 22) }
	'[]'           { PT _ (TS _ 23) }
	']'            { PT _ (TS _ 24) }
	'boolean'      { PT _ (TS _ 25) }
	'break'        { PT _ (TS _ 26) }
	'continue'     { PT _ (TS _ 27) }
	'else'         { PT _ (TS _ 28) }
	'false'        { PT _ (TS _ 29) }
	'for'          { PT _ (TS _ 30) }
	'if'           { PT _ (TS _ 31) }
	'int'          { PT _ (TS _ 32) }
	'print'        { PT _ (TS _ 33) }
	'printf'       { PT _ (TS _ 34) }
	'return'       { PT _ (TS _ 35) }
	'string'       { PT _ (TS _ 36) }
	'to'           { PT _ (TS _ 37) }
	'true'         { PT _ (TS _ 38) }
	'tuple'        { PT _ (TS _ 39) }
	'void'         { PT _ (TS _ 40) }
	'while'        { PT _ (TS _ 41) }
	'{'            { PT _ (TS _ 42) }
	'||'           { PT _ (TS _ 43) }
	'}'            { PT _ (TS _ 44) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rule  5
	ListTopDef      rules 6, 7
	Arg             rule  8
	ListArg         rules 9, 10, 11
	Block           rule  12
	ListStmt        rules 13, 14
	Stmt            rules 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31
	Item            rules 32, 33
	ListItem        rules 34, 35
	Type            rules 36, 37, 38, 39, 40, 41
	ListType        rules 42, 43, 44
	Expr7           rules 45, 46
	Expr6           rules 47, 48, 49, 50, 51, 52, 53, 54
	Expr5           rules 55, 56, 57
	Expr4           rules 58, 59
	Expr3           rules 60, 61
	Expr2           rules 62, 63
	Expr1           rules 64, 65
	Expr            rules 66, 67
	ListExpr        rules 68, 69, 70
	AddOp           rules 71, 72
	MulOp           rules 73, 74, 75
	RelOp           rules 76, 77, 78, 79, 80, 81

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'tuple'        shift, and enter state 10
	'void'         shift, and enter state 11

	Program        goto state 3
	TopDef         goto state 4
	ListTopDef     goto state 5
	Type           goto state 6

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!'            reduce using rule 1
	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	':='           reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'false'        reduce using rule 1
	'to'           reduce using rule 1
	'true'         reduce using rule 1
	'||'           reduce using rule 1
	L_Ident        reduce using rule 1
	L_integ        reduce using rule 1
	L_quoted       reduce using rule 1


State 3

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 4

	ListTopDef -> TopDef .                              (rule 6)
	ListTopDef -> TopDef . ListTopDef                   (rule 7)

	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'tuple'        shift, and enter state 10
	'void'         shift, and enter state 11
	%eof           reduce using rule 6

	TopDef         goto state 4
	ListTopDef     goto state 15
	Type           goto state 6

State 5

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 6

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 5)
	Type -> Type . '[]'                                 (rule 41)

	'[]'           shift, and enter state 14
	L_Ident        shift, and enter state 2

	Ident          goto state 13

State 7

	Type -> 'boolean' .                                 (rule 38)

	','            reduce using rule 38
	'>'            reduce using rule 38
	'[]'           reduce using rule 38
	L_Ident        reduce using rule 38


State 8

	Type -> 'int' .                                     (rule 36)

	','            reduce using rule 36
	'>'            reduce using rule 36
	'[]'           reduce using rule 36
	L_Ident        reduce using rule 36


State 9

	Type -> 'string' .                                  (rule 37)

	','            reduce using rule 37
	'>'            reduce using rule 37
	'[]'           reduce using rule 37
	L_Ident        reduce using rule 37


State 10

	Type -> 'tuple' . '<' ListType '>'                  (rule 40)

	'<'            shift, and enter state 12


State 11

	Type -> 'void' .                                    (rule 39)

	','            reduce using rule 39
	'>'            reduce using rule 39
	'[]'           reduce using rule 39
	L_Ident        reduce using rule 39


State 12

	Type -> 'tuple' '<' . ListType '>'                  (rule 40)

	'>'            reduce using rule 42
	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'tuple'        shift, and enter state 10
	'void'         shift, and enter state 11

	Type           goto state 17
	ListType       goto state 18

State 13

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 5)

	'('            shift, and enter state 16


State 14

	Type -> Type '[]' .                                 (rule 41)

	','            reduce using rule 41
	'>'            reduce using rule 41
	'[]'           reduce using rule 41
	L_Ident        reduce using rule 41


State 15

	ListTopDef -> TopDef ListTopDef .                   (rule 7)

	%eof           reduce using rule 7


State 16

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 5)

	')'            reduce using rule 9
	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'tuple'        shift, and enter state 10
	'void'         shift, and enter state 11

	Arg            goto state 21
	ListArg        goto state 22
	Type           goto state 23

State 17

	Type -> Type . '[]'                                 (rule 41)
	ListType -> Type .                                  (rule 43)
	ListType -> Type . ',' ListType                     (rule 44)

	','            shift, and enter state 20
	'>'            reduce using rule 43
	'[]'           shift, and enter state 14


State 18

	Type -> 'tuple' '<' ListType . '>'                  (rule 40)

	'>'            shift, and enter state 19


State 19

	Type -> 'tuple' '<' ListType '>' .                  (rule 40)

	','            reduce using rule 40
	'>'            reduce using rule 40
	'[]'           reduce using rule 40
	L_Ident        reduce using rule 40


State 20

	ListType -> Type ',' . ListType                     (rule 44)

	'>'            reduce using rule 42
	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'tuple'        shift, and enter state 10
	'void'         shift, and enter state 11

	Type           goto state 17
	ListType       goto state 27

State 21

	ListArg -> Arg .                                    (rule 10)
	ListArg -> Arg . ',' ListArg                        (rule 11)

	')'            reduce using rule 10
	','            shift, and enter state 26


State 22

	TopDef -> Type Ident '(' ListArg . ')' Block        (rule 5)

	')'            shift, and enter state 25


State 23

	Arg -> Type . Ident                                 (rule 8)
	Type -> Type . '[]'                                 (rule 41)

	'[]'           shift, and enter state 14
	L_Ident        shift, and enter state 2

	Ident          goto state 24

State 24

	Arg -> Type Ident .                                 (rule 8)

	')'            reduce using rule 8
	','            reduce using rule 8


State 25

	TopDef -> Type Ident '(' ListArg ')' . Block        (rule 5)

	'{'            shift, and enter state 30

	Block          goto state 29

State 26

	ListArg -> Arg ',' . ListArg                        (rule 11)

	')'            reduce using rule 9
	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'tuple'        shift, and enter state 10
	'void'         shift, and enter state 11

	Arg            goto state 21
	ListArg        goto state 28
	Type           goto state 23

State 27

	ListType -> Type ',' ListType .                     (rule 44)

	'>'            reduce using rule 44


State 28

	ListArg -> Arg ',' ListArg .                        (rule 11)

	')'            reduce using rule 11


State 29

	TopDef -> Type Ident '(' ListArg ')' Block .        (rule 5)

	'boolean'      reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	'tuple'        reduce using rule 5
	'void'         reduce using rule 5
	%eof           reduce using rule 5


State 30

	Block -> '{' . ListStmt '}'                         (rule 12)

	'!'            shift, and enter state 45
	'('            shift, and enter state 46
	'-'            shift, and enter state 47
	';'            shift, and enter state 48
	'boolean'      shift, and enter state 7
	'break'        shift, and enter state 49
	'continue'     shift, and enter state 50
	'false'        shift, and enter state 51
	'for'          shift, and enter state 52
	'if'           shift, and enter state 53
	'int'          shift, and enter state 8
	'print'        shift, and enter state 54
	'printf'       shift, and enter state 55
	'return'       shift, and enter state 56
	'string'       shift, and enter state 9
	'true'         shift, and enter state 57
	'tuple'        shift, and enter state 10
	'void'         shift, and enter state 11
	'while'        shift, and enter state 58
	'{'            shift, and enter state 30
	'}'            reduce using rule 13
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 59
	L_quoted       shift, and enter state 60

	Ident          goto state 31
	Integer        goto state 32
	String         goto state 33
	Block          goto state 34
	ListStmt       goto state 35
	Stmt           goto state 36
	Type           goto state 37
	Expr6          goto state 38
	Expr5          goto state 39
	Expr4          goto state 40
	Expr3          goto state 41
	Expr2          goto state 42
	Expr1          goto state 43
	Expr           goto state 44

State 31

	Stmt -> Ident . '=' Expr ';'                        (rule 18)
	Stmt -> Ident . '++' ';'                            (rule 19)
	Stmt -> Ident . '--' ';'                            (rule 20)
	Expr6 -> Ident .                                    (rule 47)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 52)

	'!='           reduce using rule 47
	'%'            reduce using rule 47
	'&&'           reduce using rule 47
	'('            shift, and enter state 96
	'*'            reduce using rule 47
	'+'            reduce using rule 47
	'++'           shift, and enter state 97
	'-'            reduce using rule 47
	'--'           shift, and enter state 98
	'/'            reduce using rule 47
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'='            shift, and enter state 99
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'||'           reduce using rule 47


State 32

	Expr6 -> Integer .                                  (rule 48)
	Expr6 -> Integer .                                  (rule 51)

	'!'            reduce using rule 51
			(reduce using rule 48)

	'!='           reduce using rule 51
			(reduce using rule 48)

	'%'            reduce using rule 51
			(reduce using rule 48)

	'&&'           reduce using rule 51
			(reduce using rule 48)

	'('            reduce using rule 51
			(reduce using rule 48)

	')'            reduce using rule 51
			(reduce using rule 48)

	'*'            reduce using rule 51
			(reduce using rule 48)

	'+'            reduce using rule 51
			(reduce using rule 48)
